name section team changed

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         </li>
       </ul>
     </section>
-
-    <!-- Our team -->
+    §
+    <!-- Team -->
     <section>
       <h2>Our Team</h2>
       <ul>
