--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
     <button type="button">Oder Service</button>
 
-    <!-- Features -->
+    <!-- Anvantages -->
     <section>
+      <h2>Our advantages</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -69,7 +70,7 @@
       <ul>
         <li>
           <img
-            src="./images/tasks/Rectangle 71-2.jpg"
+            src="./images/tasks/Rectangle71-2.jpg"
             alt="PC monitor"
             width="360"
             height="300"
@@ -77,7 +78,7 @@
         </li>
         <li>
           <img
-            src="./images/tasks/Rectangle 71-1.jpg"
+            src="./images/tasks/Rectangle71-2.jpg"
             alt="Mobil application"
             width="360"
             height="300"
@@ -85,7 +86,7 @@
         </li>
         <li>
           <img
-            src="./images/tasks/Rectangle 71.jpg"
+            src="./images/tasks/Rectangle71.jpg"
             alt="PC and mobil applications"
             width="360"
             height="300"
@@ -93,14 +94,14 @@
         </li>
       </ul>
     </section>
-    §
+
     <!-- Team -->
     <section>
       <h2>Our Team</h2>
       <ul>
         <li>
           <img
-            src="./images/team/img-3.jpg"
+            src="./images/team/img3.jpg"
             alt="Mark Guerrero"
             width="264"
             height="260"
@@ -110,7 +111,7 @@
         </li>
         <li>
           <img
-            src="./images/team/img-2.jpg"
+            src="./images/team/img2.jpg"
             alt="Tom Ford"
             width="264"
             height="260"
@@ -120,7 +121,7 @@
         </li>
         <li>
           <img
-            src="./images/team/img-1.jpg"
+            src="./images/team/img1.jpg"
             alt="Camila Garcia"
             width="264"
             height="260"
