main and comments

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="uk">Студія</title>
   </head>
-  <body>
-    <header>
-      <a href="">WebStudio</a>
 
+<main>
+
+   <header>
+      <a href="">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -17,16 +18,12 @@
           <li><a href="">Studio</a></li>
         </ul>
       </nav>
-
       <a href="tel:+11(000)1111111">+11(000)1111111</a>
-
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     </header>
 
-    <main></main>
     <!-- hero -->
     <h1>Effective Solutions for Your Business</h1>
-
     <button type="button">Oder Service</button>
 
     <!-- Anvantages -->
@@ -141,7 +138,8 @@
         </li>
       </ul>
     </section>
-
+</main>
+   
     <footer>
       <a href="">WebStudio</a>
       <p>
