--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
     <title lang="uk">Студія</title>
   </head>
 
-<main>
-
+<body>
    <header>
       <a href="">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
-          <li><a href="">Studio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="tel:+11(000)1111111">+11(000)1111111</a>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
+
+        </ul>
+      </address>
+      
     </header>
 
+   <main>
     <!-- hero -->
     <h1>Effective Solutions for Your Business</h1>
     <button type="button">Oder Service</button>
@@ -138,7 +145,9 @@
         </li>
       </ul>
     </section>
-</main>
+  </main>
+</body>
+
    
     <footer>
       <a href="">WebStudio</a>
