bags fix main section1

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
    <main>
     <!-- hero -->
-    <h1>Effective Solutions for Your Business</h1>
-    <button type="button">Oder Service</button>
+    <section>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Oder Service</button>
+    </section>
 
     <!-- Anvantages -->
     <section>
@@ -147,7 +149,6 @@
     </section>
   </main>
 </body>
-
    
     <footer>
       <a href="">WebStudio</a>
