--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title lang="uk">Студія</title>
   </head>
 
-<body>
-   <header>
-      <a href="">WebStudio</a>
+  <body>
+    <header>
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
@@ -22,136 +21,133 @@
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
-
         </ul>
       </address>
-      
     </header>
 
-   <main>
-    <!-- hero -->
-    <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Oder Service</button>
-    </section>
+    <main>
+      <!-- hero -->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Oder Service</button>
+      </section>
 
-    <!-- Anvantages -->
-    <section>
-      <h2>Our advantages</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
+      <!-- Anvantages -->
+      <section>
+        <h2>Our advantages</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-    <!-- Tasks-->
-    <section>
-      <h2>What are we doing</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/advantages/Rectangle71-2.jpg"
-            alt="PC monitor"
-            width="360"
-            height="300"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/advantages/Rectangle71-1.jpg"
-            alt="Mobil application"
-            width="360"
-            height="300"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/advantages/Rectangle71.jpg"
-            alt="PC and mobil applications"
-            width="360"
-            height="300"
-          />
-        </li>
-      </ul>
-    </section>
+      <!-- Tasks-->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/advantages/Rectangle71-2.jpg"
+              alt="PC monitor"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/advantages/Rectangle71-1.jpg"
+              alt="Mobil application"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/advantages/Rectangle71.jpg"
+              alt="PC and mobil applications"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
 
-    <!-- Team -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/team/img3.jpg"
-            alt="Mark Guerrero"
-            width="264"
-            height="260"
-          />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img
-            src="./images/team/img2.jpg"
-            alt="Tom Ford"
-            width="264"
-            height="260"
-          />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img
-            src="./images/team/img1.jpg"
-            alt="Camila Garcia"
-            width="264"
-            height="260"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/team/img.jpg"
-            alt="Daniel Wilson"
-            width="264"
-            height="260"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
-  </main>
-</body>
-   
+      <!-- Team -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team/img3.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/img2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/img1.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/img.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Web Studio Increase the flow of customers and sales for your business
         with digital marketing & growth solutions.
