--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -29,7 +29,7 @@
       <!-- hero -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Oder Service</button>
+        <button type="button">Order Service</button>
       </section>
 
       <!-- Anvantages -->
@@ -39,7 +39,7 @@
           <li>
             <h3>Strategy</h3>
             <p>
-              goal is to identify the business problem to walk away with the
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
@@ -149,8 +149,8 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Web Studio Increase the flow of customers and sales for your business
-        with digital marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
